Name:                rbm
Version:             0.0
Description:         restricted boltzman machine
Author:              anatoly yakovenko
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
  exposed-modules:   RBM.List, RBM.Repa
  extensions:        BangPatterns
  Build-Depends:     base,
                     random,
                     split,
                     mtl,
                     repa,
                     QuickCheck,
                     criterion,
                     deepseq

Test-Suite test-repa-RBM
    type:            exitcode-stdio-1.0
    main-is:         Data/Repa.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Data.RBM.test

Test-Suite perf-repa-RBM
    type:            exitcode-stdio-1.0
    main-is:         Data/RBM.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Data.RBM.perf

Test-Suite test-repa-DBN
    type:            exitcode-stdio-1.0
    main-is:         Data.DBN.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Data.DBN.test

Executable mnist-DBN
    --type:            exitcode-stdio-1.0
    main-is:         Test/Mnist.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Test.Mnist.mnist
    Build-Depends:   bytestring,
                     repa-io,
                     repa-algorithms,
                     zlib,
                     binary

Executable trainbatches
    main-is:         Data/Mnist.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Data.Mnist.generateTrainBatches

Executable testbatches
    main-is:         Data/Mnist.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Data.Mnist.generateTestBatches

Executable bigtrainbatches
    main-is:         Data/Mnist.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Data.Mnist.generateBigTrainBatches

Executable samplebatches
    main-is:         Data/Mnist.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Data.Mnist.generateSamples


