Name:                rbm
Version:             0.1
Description:         restricted boltzman machine
Author:              anatoly yakovenko
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
  exposed-modules:   Data.RBM,
                     Data.DNN.Trainer,
                     Data.MLP,
                     Data.Matrix,
                     Data.ImageUtils,
                     Examples.Mnist
  Build-Depends:     base,
                     random,
                     split,
                     mtl,
                     repa,
                     repa-algorithms,
                     transformers,
                     monad-loops,
                     JuicyPixels,
                     JuicyPixels-repa,
                     vector,
                     deepseq

Test-Suite test-RBM
    type:            exitcode-stdio-1.0
    main-is:         Test/RBM.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Test.RBM.test
    Build-Depends:   QuickCheck,
                     monad-loops,
                     criterion

Test-Suite perf-RBM
    type:            exitcode-stdio-1.0
    main-is:         Test/RBM.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Test.RBM.perf
    Build-Depends:   QuickCheck,
                     monad-loops,
                     criterion

Test-Suite test-Matrix
    type:            exitcode-stdio-1.0
    main-is:         Test/Matrix.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Test.Matrix.test
    Build-Depends:   QuickCheck

Test-Suite test-MLP
    type:            exitcode-stdio-1.0
    main-is:         Test/MLP.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Test.MLP.test
    Build-Depends:   QuickCheck


Executable mnist
    main-is:         Examples/Mnist.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Examples.Mnist.mnist
    Build-Depends:   bytestring,
                     repa-io,
                     repa-algorithms,
                     zlib,
                     transformers,
                     statistics-linreg,
                     binary

--mnist data generation
Executable generatetrainlabels
    main-is:         Examples/Mnist.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Examples.Mnist.generateTrainLabels

Executable trainbatches
    main-is:         Examples/Mnist.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Examples.Mnist.generateTrainBatches

Executable testbatches
    main-is:         Examples/Mnist.hs
    ghc-options:     -Werror -Wall -threaded -O3 -main-is Examples.Mnist.generateTestBatches

